--- a/api/package.json
+++ b/api/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "back",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon index.js",
-    "test0": "jest --detectOpenHandles",
-    "test": "jest --watchAll --no-cache --detectOpenHandles"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^1.2.3",
-    "body-parser": "^1.20.1",
-    "express": "^4.18.2",
-    "jest": "^29.4.2",
-    "nodemon": "^2.0.20",
-    "supertest": "^6.3.3"
-  }
+   "name": "back",
+   "version": "1.0.0",
+   "description": "",
+   "main": "index.js",
+   "scripts": {
+      "start": "nodemon index.js",
+      "test0": "jest --detectOpenHandles",
+      "test": "jest --watchAll --no-cache --detectOpenHandles"
+   },
+   "author": "",
+   "license": "ISC",
+   "dependencies": {
+      "axios": "^1.2.3",
+      "body-parser": "^1.20.1",
+      "express": "^4.18.2",
+      "jest": "^29.4.2",
+      "supertest": "^6.3.3"
+   },
+   "devDependencies": {
+      "nodemon": "^2.0.22"
+   }
 }
